# Codestorm

Dvector/: CMakeLists.txt  cxx17memory  dvector.cpp  dvector.h  main.cpp
Linked List/: .clang-tidy  .clang-tidy.swp  .gitignore  CMakeLists.txt  a.out  fixthis.cpp  linkedlist.cpp  linkedlist.h  linkedlist.hpp  main.cpp
Linked List/old/: linkedlist.h
Matrix/: .gitignore  CMakeLists.txt  main.cpp  matrix.hpp
Trie/: trie.h
